fix: ajustar componente collapse

--- a/src/app/shared/components/collapse/collapse.component.scss
+++ b/src/app/shared/components/collapse/collapse.component.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/styles/colors.scss';
 .collapse {
-  position: relative;
+  position: absolute;
   overflow: hidden;
   height: auto;
   width: 100%;
